fix blank background, hide overflow and add small timer at page refresh

--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+html { 
+  background-color: #71c5cf;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 #canvas {
   width: 100%;
   height: 100%;
